--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Fira Sans', sans-serif;
+  z-index: 2;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600&display=swap');
@@ -12,8 +13,22 @@ body {
   background-color: #dbe7e4;
 }
 
+.app-background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 0;
+  background: linear-gradient( rgba(53, 255, 177, 0.4),  rgba(119, 231, 227, 0.5)), url('./assets/background8.jpg');
+  background-size: cover, cover;
+  background-position: center, center;
+  background-repeat: no-repeat, no-repeat;
+}
+
 .wrapper {
   display: flex;
+  flex-direction: column;
 }
 
 .section-container {
@@ -25,28 +40,48 @@ body {
   align-items: center;
 }
 
-.sidebar-container {
-  width: 25%;
-  min-height: 100vh;
-  position: sticky;
-  top: 0;
-  bottom: 0;
-  left: 0;
+.header-container {
+  position: fixed;
+  z-index: 99;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   background-color: #2f3e46;
+  box-shadow: rgba(0,0,0,0.5) 0 3px 3px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  background-color: #2f3e46;
+  box-shadow: rgba(0,0,0,0.5) 0 -3px 3px;
 }
 
 .sidebar-logos-container {
   display: flex;
   justify-content: space-between;
-  width: 80%;
+  align-items: center;
+  width: 20vw;
+}
+
+.links-and-me {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  color: ivory;
 }
 
 .name, .headers {
   font-family: 'Source Code Pro', monospace;
+  text-align: center;
 }
 
 .headers {
@@ -54,19 +89,20 @@ body {
 }
 
 .me {
-  height: 12vw;
+  height: calc(12vw);
   width: 12vw;
   border-radius: 50%;
-  margin-bottom: 40px;
+  margin-bottom: calc(-4vw);
+  border: 15px solid #2f3e46;
 }
 
 .sidebar-logos {
-  height: 3vw;
+  height: calc(3vw);
   width: 3vw;
+  filter: invert(100%) hue-rotate(200deg);
 }
 
 .main-container {
-  padding-left: 30vw;
   overflow: auto;
   display: flex;
   justify-content: center;
@@ -74,12 +110,15 @@ body {
   flex-direction: column;
 }
 
+.section-container {
+  /* padding-top: 10vh; */
+}
+
 .about {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  padding: 5vh 10vw 3vh 10vw;
+  padding-left: 10vw;
+  padding-right: 10vw;
 }
 
 .about > h1 {
@@ -96,7 +135,6 @@ body {
 
 .skills {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
@@ -106,7 +144,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   width: 40vw;
-  margin-bottom: 4vw;
+  margin-bottom: 50px;
 }
 
 .skills-container > img {
@@ -132,9 +170,12 @@ body {
   flex-direction: column;
 }
 
+#projects {
+  padding-top: 40px;
+}
+
 .projects-section {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
@@ -152,8 +193,26 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 1px solid ivory;
   width: 20vw;
+  min-width: 300px;
+  padding: 20px 12px 40px 12px;
+}
+
+.projects > a {
+  margin-bottom: 10px;
+  color: #0e2938;
+  text-shadow: rgba(0, 0, 0, 0.3) 2px 2px 3px;
+  text-decoration: none;
+}
+
+.projects > p {
+  text-align: justify;
+}
+
+.projects > a > img {
+  margin-bottom: 12px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.3) 2px 2px 3px;
 }
 
 
@@ -169,12 +228,92 @@ body {
 
 .contact-info {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
 .active {
-  background-color: black;
+  color: #dbe7e4;
 }
 
+@media screen and (max-width: 800px) {
+  .links-and-me > a > h2 {
+    font-size: 1em;
+  }
+
+  .me {
+    width: 20vw;
+    height: calc(20vw);
+    margin-bottom: calc(-10vw);
+    border: 10px solid #2f3e46;
+  }
+
+  h1.name {
+    margin-bottom: 10px;
+    line-height: 100%;
+  }
+
+  .section-container {
+    padding: 0 25px;
+  }
+
+  #about > h2 {
+    margin-bottom: 30px;
+  }
+
+  #about > p {
+    margin-bottom: 20px;
+    padding: 0 20px;
+    text-align: justify;
+  }
+
+  #skills > h1 {
+    margin: 30px 0 15px 0;
+  }
+
+  .skills-container {
+    flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .skills-container > img {
+    margin: 10px;
+  }
+
+  .sub-skills-container {
+    flex-direction: column;
+  }
+
+  .sub-skills-container > div {
+    margin-bottom: 20px;
+  }
+
+  .sub-skills-container > div > h1 {
+    text-align: center;
+  }
+
+  #projects {
+    padding-top: 70px;
+  }
+
+  .projects-container {
+    flex-direction: column;
+  }
+
+  .projects {
+    width: 90%;
+    margin: 20px 0 20px 0;
+  }
+
+  .sidebar-logos-container {
+    width: 80vw;
+  }
+
+  .sidebar-logos {
+    height: calc(10vw);
+    width: 10vw;
+    margin: 0 10px;
+    filter: drop-shadow(rgba(255, 255, 255, 0.5) 2px 2px 3px) invert(100%) hue-rotate(200deg);
+  }
+}
