--- a/src/styles.css
+++ b/src/styles.css
@@ -167,7 +167,7 @@ body {
 }
 
 #projects {
-  padding-top: 40px;
+  padding-top: 7vh;
 }
 
 .projects-section {
@@ -286,7 +286,7 @@ body {
   }
 
   #projects {
-    padding-top: 70px;
+    padding-top: 15vh;
   }
 
   .projects-container {
