--- a/src/styles.css
+++ b/src/styles.css
@@ -130,6 +130,16 @@ body {
   margin-bottom: 1vw;
 }
 
+.about > p {
+  max-width: 700px;
+  text-align: justify;
+  font-size: 1.2em;
+}
+
+.about > h2 {
+  margin-bottom: 40px;
+}
+
 .headers {
   padding-bottom: 2vw;
 }
@@ -171,20 +181,19 @@ body {
   flex-direction: column;
 }
 
-#projects {
-  padding-top: 7vh;
-}
 
 .projects-section {
+  padding-top: 7vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .projects-container {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   width: 75vw;
 }
@@ -194,9 +203,9 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 20vw;
+  width: 30vw;
   min-width: 300px;
-  padding: 20px 12px 40px 12px;
+  padding: 0 12px 40px 12px;
 }
 
 .projects > a {
@@ -210,6 +219,10 @@ body {
   text-align: justify;
 }
 
+.projects-section > h1 {
+  margin-top: 21vh;
+}
+
 .projects > a > img {
   margin-bottom: 12px;
   border-radius: 10px;
@@ -218,8 +231,8 @@ body {
 
 
 .screenshots {
-  width: 300px;
-  height: 200px;
+  min-width: 300px;
+  width: 30vw;
   border: 1px solid black;
 }
 
